==> strongercjd/GD32F207/04-SDIO/LCD_disp.c <==
#include "LCD_disp.h"

void LMT028_GPIO_Config ()
{
  rcu_periph_clock_enable(RCU_EXMC);
  rcu_periph_clock_enable(RCU_GPIOC);
  rcu_periph_clock_enable(RCU_GPIOD);
  rcu_periph_clock_enable(RCU_GPIOE);
  rcu_periph_clock_enable(RCU_AF);
  
  /* 配置控制线
  * PD14  :D0
  * PD15  :D1
  * PD0   :D2
  * PD1   :D3
  * PE7   :D4
  * PE8   :D5
  * PE9   :D6
  * PE10  :D7
  */
  gpio_init(GPIOD, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_0 | GPIO_PIN_1 | GPIO_PIN_14 | GPIO_PIN_15);
  gpio_init(GPIOE, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_7 | GPIO_PIN_8 | GPIO_PIN_9 | GPIO_PIN_10);
  
  /* 配置控制线
  * PD4-FSMC_NOE   :LCD-RD
  * PD5-FSMC_NWE   :LCD-WR
  * PD7-FSMC_NE1   :LCD-CS
  * PD11-FSMC_A16  :LCD-DC
  */
  gpio_init(GPIOD, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_4 | GPIO_PIN_5 | GPIO_PIN_7 | GPIO_PIN_11);
  
  /* 配置LCD复位RST控制用脚 PC6*/     
  gpio_init(GPIOC, GPIO_MODE_OUT_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_6);
  
  
  /* 配置LCD背光BK控制用脚 PC7*/  
  gpio_init(GPIOC, GPIO_MODE_OUT_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_7);
  gpio_bit_set(GPIOC,GPIO_PIN_7);
  
}

void LMT028_FSMC_Config ( void )
{
  exmc_norsram_timing_parameter_struct  norsram_timing_init_struct;
  exmc_norsram_parameter_struct  norsram_init_struct;
  
  rcu_periph_clock_enable(RCU_EXMC);
  
  /* Step 1 : configure NORSRAM timing registers --------------------------------*/
  norsram_timing_init_struct.asyn_address_setuptime = 2U;
  norsram_timing_init_struct.asyn_address_holdtime = 2U; 
  norsram_timing_init_struct.asyn_data_setuptime = 6U;
  norsram_timing_init_struct.bus_latency = 0U;
  norsram_timing_init_struct.syn_clk_division = 0U;
  norsram_timing_init_struct.syn_data_latency = 0U;
  norsram_timing_init_struct.asyn_access_mode = EXMC_ACCESS_MODE_A; 

  
  /* step 2 : configure NORSRAM control registers ---------------------------------*/
  norsram_init_struct.norsram_region = EXMC_BANK0_NORSRAM_REGION0;
  norsram_init_struct.write_mode = EXMC_ASYN_WRITE;
  norsram_init_struct.extended_mode = DISABLE;
  norsram_init_struct.asyn_wait = DISABLE;
  norsram_init_struct.nwait_signal = DISABLE;
  norsram_init_struct.memory_write = ENABLE;
  norsram_init_struct.nwait_config = EXMC_NWAIT_CONFIG_BEFORE;
  norsram_init_struct.wrap_burst_mode = DISABLE;
  norsram_init_struct.nwait_polarity = EXMC_NWAIT_POLARITY_LOW;
  norsram_init_struct.burst_mode = DISABLE;
  norsram_init_struct.databus_width = EXMC_NOR_DATABUS_WIDTH_8B;
  norsram_init_struct.memory_type = EXMC_MEMORY_TYPE_SRAM;
  norsram_init_struct.address_data_mux = DISABLE;
  norsram_init_struct.read_write_timing = &norsram_timing_init_struct;
  norsram_init_struct.write_timing = &norsram_timing_init_struct;
  
  exmc_norsram_init(&norsram_init_struct);
  exmc_norsram_enable(EXMC_BANK0_NORSRAM_REGION0);
}

void LMT028_Rst ( void )
{			
  gpio_bit_reset(GPIOC,GPIO_PIN_6);
  Delay1ms(80);				   
  	 	 
  gpio_bit_set(GPIOC,GPIO_PIN_6);
  Delay1ms(80);		
}
